<resources>
    <string name="app_name">desafioPedro</string>
    <string name="eletr_nico">Eletrônico</string>
    <string name="selecione_um_tipo_de_produto">Selecione um tipo de Produto:</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="alimentos">Alimentos</string>
    <string name="ve_culos">Veículos</string>
    <string name="bebidas">Bebidas</string>
    <string name="pr_ximo">Próximo</string>
    <string name="digite_o_valor_desse_produto">Digite o valor desse produto:</string>
    <string name="valor">valor</string>
    <string name="o_valor_a_ser_pago_de_imposto">O valor a ser pago de imposto é:</string>
    <string name="voltar_pro_inicio">Voltar pro Inicio</string>
    <string name="valor_final">Reais</string>
</resources>