<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/black"
        android:text="@string/selecione_um_tipo_de_produto"
        android:gravity="center"/>

    <RadioGroup
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp">

        <RadioButton
            android:id="@+id/RBtn_eletronico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eletr_nico"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/RBtn_alimentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alimentos"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/RBtn_medicamentos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicamentos"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/RBtn_veiculos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ve_culos"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RadioButton
            android:id="@+id/RBtn_bebidas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bebidas"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </RadioGroup>

<Button
    android:id="@+id/btn_proxima_tela1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="40dp"
    android:text="@string/pr_ximo"
    android:textColor="@color/white"
    android:background="@drawable/layoutbutton"/>


</LinearLayout>
