<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".valorImposto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digite_o_valor_desse_produto"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <EditText
        android:id="@+id/e_txt_valorImposto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/valor"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_proximo_tela2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e_txt_valorImposto"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/pr_ximo"
        android:textColor="@color/white"
        android:background="@drawable/layoutbutton" />


</RelativeLayout>